--- a/nosotros.html
+++ b/nosotros.html
@@ -7,9 +7,9 @@
     <title>Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="./Multimedia/img/keramike/Screenshot_2.png" type="image/x-icon">
-    <link rel="stylesheet" href="./estilos/index/estilo.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body>  
     <header>
         <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike.png" alt="logoKeramike">
         <nav class="contentList">
