--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,9 @@
 </head>
 <body>  
     <header>
-        <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike.png" alt="logoKeramike">
+        <a href="./index.html">
+        <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">
+    </a>
         <nav class="contentList">
             <ul class="contentListDeso">
                 <li class="contentInicio"><a href="./index.html">Inicio</a></li>
@@ -21,10 +23,10 @@
         </nav>
         <nav class="contentImgIconos">
             <a href="https://www.facebook.com/keramikeobjetosenceramica/">
-                <img src="./iconos/social/iconsFacebook.png" alt="iconofacebook">
+                <img class="fb" src="./iconos/social/iconsFacebook.png" alt="iconofacebook">
             </a>
             <a href="https://www.instagram.com/keramike.taller/">
-                <img src="./iconos/social/iconsInstagram.png" alt="iconoInstagram">
+                <img class="ig" src="./iconos/social/iconsInstagram.png" alt="iconoInstagram">
             </a>
         </nav>
         <div class="dropdown">
