--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-        <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike.png" alt="logoKeramike">
+        <a href="./index.html">
+        <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">
+    </a>
         <nav class="contentList">
             <ul class="contentListDeso">
                 <li class="contentInicio"><a href="./index.html">Inicio</a></li>
@@ -21,10 +23,10 @@
         </nav>
         <nav class="contentImgIconos">
             <a href="https://www.facebook.com/keramikeobjetosenceramica/">
-                <img src="./iconos/social/iconsFacebook.png" alt="iconofacebook">
+                <img class="fb" src="./iconos/social/iconsFacebook.png" alt="iconofacebook">
             </a>
             <a href="https://www.instagram.com/keramike.taller/">
-                <img src="./iconos/social/iconsInstagram.png" alt="iconoInstagram">
+                <img class="ig" src="./iconos/social/iconsInstagram.png" alt="iconoInstagram">
             </a>
         </nav>
         <div class="dropdown">
@@ -50,15 +52,15 @@
                 <h2 class="ubicacionTituloDos__contacto">¿Donde estamos?</h2>
             </div>
             <div class="contactRow">
-                <div>
+                <div class="content_horario_direccion">
                     <div class="contentHorario">
-                        <h3 class="contentHora">Horarios</h3>
+                        <h3 class="contentHora">HORARIOS</h3>
                         <p class="contentTextHora">Lunes a Viernes : 10:00h - 14:00h
                             17:00h - 20:00h.</p>
                     </div>
                     <div class="contentDireccion">
-                        <h3 class="contentDirec">Direccion</h3>
-                        <p class="contentTextDireccion">Lorem ipsum dolor sit amet consectetur.</p>
+                        <h3 class="contentDirec">DIRECCIÓN</h3>
+                        <p class="contentTextDireccion">Villa Allende, Provincia de Córdoba, Argentina</p>
                     </div>
                 </div>
                 <iframe class="contentGoogleMaps"
