--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keramike Taller</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./Multimedia/img/keramike/Screenshot_2.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./Multimedia/img/keramike/Screenshot_2-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike.png" alt="logoKeramike">
+        <a href="./index.html">
+            <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">
+        </a>
         <nav class="contentList">
             <ul class="contentListDeso">
                 <li class="contentInicio"><a href="./index.html">Inicio</a></li>
@@ -21,115 +24,138 @@
         </nav>
         <nav class="contentImgIconos">
             <a href="https://www.facebook.com/keramikeobjetosenceramica/">
-                <img src="./iconos/social/iconsFacebook.png" alt="iconofacebook">
+                <img class="fb" src="./iconos/social/iconsFacebook.png" alt="iconofacebook">
             </a>
             <a href="https://www.instagram.com/keramike.taller/">
-                <img src="./iconos/social/iconsInstagram.png" alt="iconoInstagram">
+                <img class="ig" src="./iconos/social/iconsInstagram.png" alt="iconoInstagram">
             </a>
         </nav>
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                  </svg>
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                </svg>
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="./index.html">Inicio</a></li>
-              <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
-              <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+                <li><a class="dropdown-item" href="./index.html">Inicio</a></li>
+                <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
+                <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             </ul>
-          </div>
+        </div>
     </header>
     <main>
         <div>
             <div>
-            <h1 >DEJA QUE TU IMAGINACIÓN TOME FORMA</h1>
+                <h1>DEJA QUE TU IMAGINACIÓN TOME FORMA</h1>
             </div>
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="./Multimedia/img/carrusel/detalles-jarron-ceramica-uno.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./Multimedia/img/carrusel/mujer-joven-hace-ceramica-taller-dos.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./Multimedia/img/carrusel/persona-que-trabaja-taller-alfareria-tres.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./Multimedia/img/carrusel/trabajo-de-ceramica-pintura-azul-cuatro.jpg" class="d-block w-100" alt="...">
-                  </div>
-                </div>  
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-        <div class="contentTodo">
-            <div class="contentboxUno">
-                <img src="./iconos/iconsCorazon.png" alt="iconsCorazon">
-                <h2 class="titleInpira">Inspira</h2>
-                <p class="textInpira">Buscamos despertar tu espíritu creativo y nutrirlo con una dosis de inspiración.
-                    Cada pincelada, cada puntada y cada moldeado son oportunidades para explorar tu imaginación y llevar
-                    tus ideas más allá de los límites. Inspírate en cada detalle que te rodea, en cada historia que te
-                    conmueve y en cada emoción que te impulsa.</p>
-            </div>
-            <div class="contentboxDos">
-                <img src="./iconos/iconsGente.png" alt="iconsGente">
-                <h2 class="tittleDiver">Divierte</h2>
-                <p class="textDiver">Encontrarás un espacio lleno de risas, amistad y creatividad compartida. Aquí,
-                    personas de diferentes edades se reúnen para disfrutar de momentos inolvidables juntos. Con las
-                    manos ocupadas en proyectos emocionantes, cada uno descubre nuevas habilidades. </p>
-            </div>
-            <div class="contentboxTres">
-                <img src="./iconos/iconsCreatividad.png" alt="iconsCreatividad">
-                <h2 class="tittleExpo">Explorar</h2>
-                <p class="textExpo">Aquí, cada proyecto es una oportunidad para sumergirte en un mundo de posibilidades
-                    infinitas. Deja que tu curiosidad te guía mientras descubres nuevas técnicas, materiales fascinantes
-                    y combinación únicas de colores. Explora tu creatividad sin límites y desafía los confines de tu
-                    imaginación. </p>
-            </div>
-        </div>
-        <section>
-            <div class="contentRight">
-                <div class="textContainerUno">
-                    <h3 class="tittleTaller">Taller</h3>
-                    <p class="textBienvenida">Bienvenido a nuestro emocionante taller de manualidades de cerámica, donde
-                        la creatividad y la destreza se combinan para dar vida a obras de arte únicas. Sumérgete en el
-                        mundo de la arcilla y descubre el placer de moldear y dar forma a tu imaginación. Nuestros
-                        expertos artesanos te guiarán en el proceso, enseñándote técnicas tradicionales y contemporáneas
-                        para trabajar con este material versátil. Desde la creación de tazas y platos hasta esculturas y
-                        objetos decorativos, aquí encontrarás el espacio perfecto para explorar tu lado artístico. Cada
-                        pincelada de esmalte te permitirán expresar tu estilo único y capturar la belleza de la cerámica
-                        hecha a mano.</p>
+                    <div class="carousel-item active">
+                        <img src="./Multimedia/img/carrusel/detalles-jarron-ceramica-uno.jpg" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Multimedia/img/carrusel/mujer-joven-hace-ceramica-taller-dos.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Multimedia/img/carrusel/persona-que-trabaja-taller-alfareria-tres.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Multimedia/img/carrusel/trabajo-de-ceramica-pintura-azul-cuatro.jpg"
+                            class="d-block w-100" alt="...">
+                    </div>
                 </div>
-                <img class="imgTaller" src="./Multimedia/img/keramike/tallerGrup.jpeg" alt="Taller">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-        </section>
+            <div class="contentTodo">
+                <div class="contentboxUno">
+                    <img 
+                     src="./iconos/iconsCorazon.png" alt="iconsCorazon">
+                    <h2 class="titleInpira">Inspira</h2>
+                    <p class="textInpira">Buscamos despertar tu espíritu creativo y nutrirlo con una dosis de
+                        inspiración.
+                        Cada pincelada, cada puntada y cada moldeado son oportunidades para explorar tu imaginación y
+                        llevar
+                        tus ideas más allá de los límites. Inspírate en cada detalle que te rodea, en cada historia que
+                        te
+                        conmueve y en cada emoción que te impulsa.</p>
+                </div>
+                <div class="contentboxDos">
+                    <img class="icono_2" src="./iconos/iconsGente.png" alt="iconsGente">
+                    <h2 class="tittleDiver">Divierte</h2>
+                    <p class="textDiver">Encontrarás un espacio lleno de risas, amistad y creatividad compartida. Aquí,
+                        personas de diferentes edades se reúnen para disfrutar de momentos inolvidables juntos. Con las
+                        manos ocupadas en proyectos emocionantes, cada uno descubre nuevas habilidades. </p>
+                </div>
+                <div class="contentboxTres">
+                    <img class="icono_3" src="./iconos/iconsCreatividad.png" alt="iconsCreatividad">
+                    <h2 class="tittleExpo">Explorar</h2>
+                    <p class="textExpo">Aquí, cada proyecto es una oportunidad para sumergirte en un mundo de
+                        posibilidades
+                        infinitas. Deja que tu curiosidad te guía mientras descubres nuevas técnicas, materiales
+                        fascinantes
+                        y combinación únicas de colores. Explora tu creatividad sin límites y desafía los confines de tu
+                        imaginación. </p>
+                </div>
+            </div>
+            <section>
+                <div class="contentRight">
+                    <div class="textContainerUno">
+                        <h3 class="tittleTaller">Taller</h3>
+                        <p class="textBienvenida">Bienvenido a nuestro emocionante taller de manualidades de cerámica,
+                            donde
+                            la creatividad y la destreza se combinan para dar vida a obras de arte únicas. Sumérgete en
+                            el
+                            mundo de la arcilla y descubre el placer de moldear y dar forma a tu imaginación. Nuestros
+                            expertos artesanos te guiarán en el proceso, enseñándote técnicas tradicionales y
+                            contemporáneas
+                            para trabajar con este material versátil. Desde la creación de tazas y platos hasta
+                            esculturas y
+                            objetos decorativos, aquí encontrarás el espacio perfecto para explorar tu lado artístico.
+                            Cada
+                            pincelada de esmalte te permitirán expresar tu estilo único y capturar la belleza de la
+                            cerámica
+                            hecha a mano.</p>
+                    </div>
+                    <img class="imgTaller" src="./Multimedia/img/keramike/tallerGrup.jpeg" alt="Taller">
+                </div>
+            </section>
 
-        <section>
-            <div class="contentLeft">
-                <div class="textContainerDos">
-                    <h3 class="tittleNovedad">Novedades</h3>
-                    <p class="textNov">¡Tenemos emocionantes novedades en nuestro taller de manualidades! Te
-                        recomendamos explorar las nuevas y fascinantes opciones que hemos preparado para ti. Hemos
-                        incorporado técnicas vanguardistas y materiales innovadores que te inspirarán a elevar tu
-                        creatividad a nuevos niveles. </p>
+            <section>
+                <div class="contentLeft">
+                    <div class="textContainerDos">
+                        <h3 class="tittleNovedad">Novedades</h3>
+                        <p class="textNov">¡Tenemos emocionantes novedades en nuestro taller de manualidades! Te
+                            recomendamos explorar las nuevas y fascinantes opciones que hemos preparado para ti. Hemos
+                            incorporado técnicas vanguardistas y materiales innovadores que te inspirarán a elevar tu
+                            creatividad a nuevos niveles. </p>
+                    </div>
+                    <div class="textContainerTres">
+                        <h3 class="titleAlgo">Algo más...</h3>
+                        <p class="textAlgo">Además, hemos ampliado nuestra gama de proyectos, brindándote aún más
+                            oportunidades para experimentar y descubrir nuevas pasiones. Ya seas un principiante curioso
+                            o
+                            un experto en busca de nuevos desafíos, nuestras novedades te esperan con los brazos
+                            abiertos.
+                        </p>
+                    </div>
+                    <img class="imgPincel" src="./Multimedia/img/keramike/pincelVarios.jpeg" alt="VariosPinceles">
                 </div>
-                <div class="textContainerTres">
-                    <h3 class="titleAlgo">Algo más...</h3>
-                    <p class="textAlgo">Además, hemos ampliado nuestra gama de proyectos, brindándote aún más
-                        oportunidades para experimentar y descubrir nuevas pasiones. Ya seas un principiante curioso o
-                        un experto en busca de nuevos desafíos, nuestras novedades te esperan con los brazos abiertos.
-                    </p>
-                </div>
-                <img class="imgPincel" src="./Multimedia/img/keramike/pincelVarios.jpeg" alt="VariosPinceles">
-            </div>
-        </section>
+            </section>
     </main>
     <footer>
         <div class="contentEnd">
@@ -137,6 +163,9 @@
             <p class="contentTextCopyright">©2023 Keramike.Taller</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
