--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
             </a>
         </nav>
         <div class="dropdown">
-            <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"  title="Abrir menú desplegable">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                   </svg>
@@ -50,24 +50,22 @@
             </div>
             <div class="contentPartDos__contacto">
                 <h2 class="ubicacionTituloDos__contacto">¿Donde estamos?</h2>
-            </div>
-            <div class="contactRow">
                 <div class="content_horario_direccion">
                     <div class="contentHorario">
-                        <h3 class="contentHora">HORARIOS</h3>
-                        <p class="contentTextHora">Lunes a Viernes : 10:00h - 14:00h
-                            17:00h - 20:00h.</p>
+                        <h3 >HORARIOS</h3>
+                        <p class="contentTextHora">Lunes a Viernes : 10:00h - 14:00h 17:00h - 20:00h.</p>
                     </div>
+                
                     <div class="contentDireccion">
-                        <h3 class="contentDirec">DIRECCIÓN</h3>
+                        <h3 >DIRECCIÓN</h3>
                         <p class="contentTextDireccion">Villa Allende, Provincia de Córdoba, Argentina</p>
                     </div>
                 </div>
+            </div>
                 <iframe class="contentGoogleMaps"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3409.2977379942363!2d-64.27721138833631!3d-31.29551499031226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329cf11b8de615%3A0x7be38aa408fff19!2sAmbay%2C%20Villa%20Allende%2C%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2ses!4v1686347349109!5m2!1ses-419!2ses"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
         </div>
         <div class="contentInfoFinal">
             <form class="contentForm" action="">
