--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <header>
         <a href="./index.html">
-            <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">
-        </a>
+            <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">  </a>
         <nav class="contentList">
             <ul class="contentListDeso">
                 <li class="contentInicio"><a href="./index.html">Inicio</a></li>
@@ -32,7 +31,7 @@
         </nav>
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+                aria-expanded="false" title="Abrir menú desplegable">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
                     viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
@@ -153,8 +152,9 @@
                             abiertos.
                         </p>
                     </div>
-                    <img class="imgPincel" src="./Multimedia/img/keramike/pincelVarios.jpeg" alt="VariosPinceles">
                 </div>
+                    <img class="imgPincel" src="./Multimedia/img/keramike/pincelVarios.jpeg" alt="VariosPinceles">
+                
             </section>
     </main>
     <footer>
