--- a/nosotros.html
+++ b/nosotros.html
@@ -30,7 +30,7 @@
             </a>
         </nav>
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"  title="Abrir menú desplegable">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                   </svg>
@@ -53,10 +53,8 @@
                 mano.
                 Bienvenidos a un ambiente cálido y acogedor donde podrás aprender y explorar tu propia creatividad.
                 Únete a
-                nosotros y descubre la magia de dar vida a la arcilla en nuestro taller de cerámica.</p>
-        </div>
-        <div class="contentFotoFrasco">
-            <img src="./Multimedia/img/keramike/poteCeramica.jpeg" alt="Ceramica liquida y pincel">
+                nosotros y descubre la magia de dar vida a la arcilla en nuestro taller de cerámica.</p>        
+            <img class="manosytorno" src="./Multimedia/img/manosyTorno.jpg" alt="">
         </div>
     </main>
     <footer>
