--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keramike Taller</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="./Multimedia/img/keramike/Screenshot_2-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <a href="./index.html">
-            <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">  </a>
+            <img class="logoKeramikeUno" src="./Multimedia/img/keramike/logoKeramike-removebg-preview.png" alt="logoKeramike">  
+        </a>
         <nav class="contentList">
             <ul class="contentListDeso">
                 <li class="contentInicio"><a href="./index.html">Inicio</a></li>
