--- a/contacto.html
+++ b/contacto.html
@@ -77,7 +77,7 @@
                     <label for="terminos">Acepta Terminos y Concisiciones.</label>
                     <input type="checkbox" name="" id="checkbox">
                 </div>
-                <button type="submit">Enviar</button>
+                <button class="button__enviar" type="submit">Enviar</button>
                 <h5> ¡Únete a nosotros en este apasionante taller y déjate llevar por el arte de la cerámica!</h5>
             </form>
         </div>
