--- a/nosotros.html
+++ b/nosotros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
+    <meta name="description" content=" Nuestro taller es un espacio donde la creatividad se mezcla con la destreza artesanal. Descubre quiénes somos y cómo creamos piezas únicas con amor y dedicación">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="./Multimedia/img/keramike/Screenshot_2-removebg-preview.png" type="image/x-icon">
